fixed address to break in a proper place between street and country, so it doesn't look like shit

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,3 @@
 
  @import "bootstrap";
  @import "font-awesome";
-
- [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-   display: none !important;
- }
